--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Poppins:ital,wght@0,300;0,400;1,200;1,300&family=Roboto+Slab&family=Signika+Negative:wght@300&display=swap');
 *{
     box-sizing: border-box;
@@ -187,30 +185,52 @@ body{
     
    
 }
-@media screen and (max-width:600px){
+@media screen and (max-width:500px){
     .search h1{
         text-align: center;
         font-size: 3.5rem;
+        margin-right: 120px;
     }
     .search h2{
         text-align: center;
         font-size: 2rem;
+        margin-right: 120px;
 
     }
     .search{
-        width: 540px;
+        width: 480px;
         margin: 1rem;
     }
     .search blockquote{
         text-align: center;
         font-size: 1rem;
         font-weight: 400;
+        margin-right: 120px;
     }
+
+    .meal-recipe{
+        width: 60%;
+        height: 70%;
+        transform: translate(0%, -40%);
+        -webkit-transform: translate(0%, -40%);
+        -moz-transform:translate(0%, -40%);
+        -ms-transform:translate(0%, -40%);
+        -o-transform: translate(0%, -40%);
+    }
+    .search-bar{
+   
+        padding: 0 0.5rem;
+        margin-left: 0vw;
+        font-size: 1rem;
+      
+    }
+    
     .NotFound{
    
         font-size: 1rem;
-        font-weight: 500;
+        font-weight: 700;
         color: #000000;
+      
         transform: translate(-100%,0);
         -webkit-transform: translate(-100%,0);
         -moz-transform:translate(-100%,0);
